--- a/05-표현식과문.md
+++ b/05-표현식과문.md
@@ -29,7 +29,7 @@ var sum = 10 + 30; // 30
 
 - 프로그램을 구성하는 기본 단위자 최소 실행 단위
 - 문은 여러 토큰으로 구성됨
-- 문법적으로 의미를 가지며, 문법적으로 더 이상 나눌 수 ㅇ벗는 코드의 기본 요소
+- 문법적으로 의미를 가지며, 문법적으로 더 이상 나눌 수 없는 코드의 기본 요소
 - 키워드, 식별자, 연산자, 리터럴, 세미콜론, 마침표 등
 - 선언문, 할당문, 조건문, 반복문
 
