--- a/04-변수.md
+++ b/04-변수.md
@@ -3,11 +3,11 @@
 - 값을 저장하기 위해 확보한 공간 자체를 의미
 - 변수에는 `메모리 주소`가 저장되어 있다. (e.g. 0x0669F913)
 
-## 할당 (Assignment)
+# 할당 (Assignment)
 
 - 변수에 할당을 하면 해당 메모리 주소에 값이 저장된다.
 
-## 참조 (Reference)
+# 참조 (Reference)
 
 - 변수를 참조하면 변수에 저장된 메모리 주소로 가서 해당 메모리 주소에 저장된 값을 불러온다.
 
