--- a/05-표현식과문.md
+++ b/05-표현식과문.md
@@ -18,7 +18,7 @@ var sum = 10 + 30; // 30
 - 코드가 실행되는 시점인 런타임에 리터럴을 평가해 값을 생성
 - 예를 들어 3 은 숫자 리터럴이다
 
-# 표현식 (statement)
+# 표현식 (expression)
 
 - 값으로 평가될 수 있는 문
 - 표현식이 평가되면 새로운 값을 생성하거나 기존 값을 참조
