feat: Update section 12

--- a/11. 원시 값과 객체의 비교.md
+++ b/11. 원시 값과 객체의 비교.md
@@ -124,10 +124,10 @@ var person = {
 
 ```javascript
 var person = {
- name: 'Lee'
+  name: 'Lee',
 };
 
-/ 프로퍼티 값 갱신
+// 프로퍼티 값 갱신
 person.name = 'Kim';
 // 프로퍼티 동적 생성
 person.address = 'Seoul';
