--- a/15.let,const 키워드와 블록 레벨 스코프.md
+++ b/15.let,const 키워드와 블록 레벨 스코프.md
@@ -40,7 +40,7 @@ console.log(x); // 10
 ```javascript
 let bar = 123;
 // let이나 const 키워드로 선언된 변수는 같은 스코프 내에서 중복 선언을 허용하지 않는다.
-let bar = 456; // SyntaxError: Identifier 'bar' has already been d
+let bar = 456; // SyntaxError: Identifier 'bar' has already been defined
 ```
 
 ## 블록 레벨 스코프
