feat: Update section 17

--- a/17.생성자 함수에 의한 객체 생성.md
+++ b/17.생성자 함수에 의한 객체 생성.md
@@ -1,17 +1,375 @@
 # Object 생성자 함수
 
+- new 연산자와 함께 Object 생성자 함수를 호출하면 빈 객체를 생성하여 반환함
+
+```js
+// 빈 객체의 생성
+const person = new Object();
+// 프로퍼티 추가
+person.name = 'Lee';
+person.sayHello = function () {
+  console.log('Hi! My name is ' + this.name);
+};
+console.log(person); // {name: "Lee", sayHello: ƒ}
+person.sayHello(); // Hi! My name is Lee
+```
+
+- 생성자 함수란 new 연산자와 함께 호출하여 객체(인스턴스)를 생성하는 함수
+- 생성자 함수에 의해 생성된 객체를 인스턴스라고 한다
+
+```js
+// String 생성자 함수에 의한 String 객체 생성
+const strObj = new String('Lee');
+console.log(typeof strObj); // object
+console.log(strObj); // String {"Lee"}
+// Number 생성자 함수에 의한 Number 객체 생성
+const numObj = new Number(123);
+console.log(typeof numObj); // object
+console.log(numObj); // Number {123}
+// Boolean 생성자 함수에 의한 Boolean 객체 생성
+const boolObj = new Boolean(true);
+console.log(typeof boolObj); // object
+console.log(boolObj); // Boolean {true}
+// Function 생성자 함수에 의한 Function 객체(함수) 생성
+const func = new Function('x', 'return x * x');
+console.log(typeof func); // function
+console.dir(func); // ƒ anonymous(x)
+// Array 생성자 함수에 의한 Array 객체(배열) 생성
+const arr = new Array(1, 2, 3);
+console.log(typeof arr); // object
+console.log(arr); // [1, 2, 3]
+// RegExp 생성자 함수에 의한 RegExp 객체(정규 표현식) 생성
+const regExp = new RegExp(/ab+c/i);
+console.log(typeof regExp); // object
+console.log(regExp); // /ab+c/i
+// Date 생성자 함수에 의한 Date 객체 생성
+const date = new Date();
+console.log(typeof date); // object
+console.log(date); // Mon May 04 2020 08:36:33 GMT+0900 (대한민국 표준시)
+```
+
 # 생성자 함수
 
 ## 객체 리터럴에 의한 객체 생성 방식의 문제점
 
+- 객체 리터럴에 의한 객체 생성 방식은 간편하지만 객체 리터럴에 의한 객체 생성 방식은 단 하나의 객체만 생성
+- 동일한 프로퍼티를 여러 개 생성해야 하는 경우는 비효율적
+
+```js
+const circle1 = {
+  radius: 5,
+  getDiameter() {
+    return 2 * this.radius;
+  },
+};
+console.log(circle1.getDiameter()); // 10
+const circle2 = {
+  radius: 10,
+  getDiameter() {
+    return 2 * this.radius;
+  },
+};
+console.log(circle2.getDiameter()); // 20
+```
+
 ## 생성자 함수에 의한 객체 생성 방식의 장점
+
+- 생성자 함수에 의한 객체 생성 방식은 클래스와 같이 인스턴스를 생성할 수 있어 여러 개의 객체를 생성할 때 유용
+
+```js
+// 생성자 함수
+function Circle(radius) {
+  // 생성자 함수 내부의 this는 생성자 함수가 생성할 인스턴스를 가리킨다.
+  this.radius = radius;
+  this.getDiameter = function () {
+    return 2 * this.radius;
+  };
+}
+// 인스턴스의 생성
+const circle1 = new Circle(5); // 반지름이 5인 Circle 객체를 생성
+const circle2 = new Circle(10); // 반지름이 10인 Circle 객체를 생성
+console.log(circle1.getDiameter()); // 10
+console.log(circle2.getDiameter()); // 20
+```
+
+- this는 일반 함수로서 호출하면 전역 객체, 메서드로서 호출하면 메서드를 호출한 객체(마침표 앞의 객체), 생성자 함수로서 호출이면 생성자 함수가 미래에 생성할 인스턴스를 가리킨다.
+- 함수는 다양한 방식으로 호출될 수 있다
+
+```js
+// 함수는 다양한 방식으로 호출될 수 있다.
+function foo() {
+  console.log(this);
+}
+// 일반적인 함수로서 호출
+// 전역 객체는 브라우저 환경에서는 window, Node.js 환경에서는 global을 가리킨다.
+foo(); // window
+const obj = { foo }; // ES6 프로퍼티 축약 표현
+// 메서드로서 호출
+obj.foo(); // obj
+// 생성자 함수로서 호출
+const inst = new foo(); // inst
+```
+
+- 위와 같이 함수는 new 연산자와 함께 호출하면 생성자 함수로 동작함
+
+```js
+// new 연산자와 함께 호출하지 않으면 생성자 함수로 동작하지 않는다.
+// 즉, 일반 함수로서 호출된다.
+const circle3 = Circle(15);
+// 일반 함수로서 호출된 Circle은 반환문이 없으므로 암묵적으로 undefined를 반환한다.
+console.log(circle3); // undefined
+// 일반 함수로서 호출된 Circle 내의 this는 전역 객체를 가리킨다.
+console.log(radius); // 1
+```
 
 ## 생성자 함수의 인스턴스 생성 과정
 
+- 생성자 함수의 역할은 프로퍼티가 동일한 인스턴스를 생성하기 위한 템플릿으로서 인스턴스를 생성하는 것, 생성된 인스턴스를 초기화하는 것
+- 생성자가 인스턴스 생성하는 것은 필수, 생성된 인스턴스를 초기화하는 것은 옵션이다
+
+```js
+// 생성자 함수
+function Circle(radius) {
+  // 인스턴스 초기화
+  this.radius = radius;
+  this.getDiameter = function () {
+    return 2 * this.radius;
+  };
+}
+// 인스턴스 생성
+const circle1 = new Circle(5); // 반지름이 5인 Circle 객체를 생성
+```
+
+- 위를 보면 인스턴스를 생성하고 반환하는 코드는 보이지 않음
+- 자바스크립트 엔진은 암묵적인 처리를 통해 인스턴스를 생성하고 반환함
+- new 연산자와 함께 생성자 함수를 호출하면 자바스크립트 엔진은 암묵적으로 인스턴스 초기화, 반환한다.
+
+1. 인스턴스 생성과 this 바인딩
+
+- 암묵적으로 빈 객체가 생성
+- 인스턴스는 this에 바인딩 (식별자와 값을 연결하는 과정)
+
+```js
+function Circle(radius) {
+ // 1. 암묵적으로 인스턴스가 생성되고 this에 바인딩된다.
+ console.log(this); // Circle {}
+ this.radius = radius;
+ this.getDiameter = function () {
+ return 2 * this.radius;
+ }
+```
+
+2. 인스턴스 초기화
+
+- 생성자 함수에 기술되어 있는 코드가 한 줄씩 실행되어 this에 바인딩되어 있는 인스턴스 초기화
+
+```js
+function Circle(radius) {
+  // 1. 암묵적으로 인스턴스가 생성되고 this에 바인딩된다.
+  // 2. this에 바인딩되어 있는 인스턴스를 초기화한다.
+  this.radius = radius;
+  this.getDiameter = function () {
+    return 2 * this.radius;
+  };
+}
+```
+
+3. 인스턴스 반환
+
+- 생성자 함수 내부에서 모든 처리가 끝나면 완성된 인스턴스가 바인딩된 this를 암묵적으로 반환
+- 만약 this가 아닌 다른 객체를 명시적으로 반환하면 this가 반환되지 못하고 return 문에 명시된 객체가 반환된다. 근데 또 원시값을 반환하는 건 괜찮음...
+
+```js
+function Circle(radius) {
+  // 1. 암묵적으로 빈 객체가 생성되고 this에 바인딩된다.
+  // 2. this에 바인딩되어 있는 인스턴스를 초기화한다.
+  this.radius = radius;
+  this.getDiameter = function () {
+    return 2 * this.radius;
+  };
+  // 3. 완성된 인스턴스가 바인딩된 this가 암묵적으로 반환된다.
+}
+// 인스턴스 생성. Circle 생성자 함수는 암묵적으로 this를 반환한다.
+const circle = new Circle(1);
+console.log(circle); // Circle {radius: 1, getDiameter: ƒ}
+```
+
+```js
+function Circle(radius) {
+  // 1. 암묵적으로 빈 객체가 생성되고 this에 바인딩된다.
+  // 2. this에 바인딩되어 있는 인스턴스를 초기화한다.
+  this.radius = radius;
+  this.getDiameter = function () {
+    return 2 * this.radius;
+  };
+  // 3. 암묵적으로 this를 반환한다.
+  // 명시적으로 객체를 반환하면 암묵적인 this 반환이 무시된다.
+  return {};
+}
+// 인스턴스 생성. Circle 생성자 함수는 명시적으로 반환한 객체를 반환한다.
+const circle = new Circle(1);
+console.log(circle); // {}
+```
+
+```js
+function Circle(radius) {
+  // 1. 암묵적으로 빈 객체가 생성되고 this에 바인딩된다.
+  // 2. this에 바인딩되어 있는 인스턴스를 초기화한다.
+  this.radius = radius;
+  this.getDiameter = function () {
+    return 2 * this.radius;
+  };
+  // 3. 암묵적으로 this를 반환한다.
+  // 명시적으로 원시 값을 반환하면 원시 값 반환은 무시되고 암묵적으로 this가 반환된다.
+  return 100;
+}
+// 인스턴스 생성. Circle 생성자 함수는 명시적으로 반환한 객체를 반환한다.
+const circle = new Circle(1);
+console.log(circle); // Circle {radius: 1, getDiameter: ƒ}
+```
+
 ## 내부 메서드 [[Call]]과 [[Construct]]
+
+- 함수 선언문 또는 함수 표현식으로 정의한 함수는 일반적인 함수로서 호출할 수 있는 것은 물론 생성자 함수로서 호출할 수 있음
+- 함수는 객체이므로 일반 객체와 동일하게 동작할 수 있음
+- 함수 객체는 일반 객체가 가지고 있는 내부 슬롯과 내부 메서드를 모두 가지고 있음
+- 하지만 일반 객체와는 다름. 일반 객체는 호출할 수 없지만 함수는 호출 가능
+- 따라서 함수 객체는 일반 객체가 가지고 있는 내부 슬롯과 내부 메서드는 물론, 함수로서 동작하기 위해 함수 객체만을 위한 [[Enviroment]], [[FormalParameters]] 등의 내부 슬롯과 [[Call]], [[Construct]]와 같은 내부 메서드를 추가로 가지고 있음
+- 함수가 일반 함수로서 호출되면 함수 객체의 내부 메서드[[Call]]이 호출되고 new 연산자와 함께 생성자 함수로서 호출되면 내부 메서드 [[Construct]]가 호출됨
+
+```js
+// 함수는 객체다.
+function foo() {}
+// 함수는 객체이므로 프로퍼티를 소유할 수 있다.
+foo.prop = 10;
+// 함수는 객체이므로 메서드를 소유할 수 있다.
+foo.method = function () {
+  console.log(this.prop);
+};
+foo.method(); // 10
+```
+
+```js
+function foo() {}
+// 일반적인 함수로서 호출: [[Call]]이 호출된다.
+foo();
+// 생성자 함수로서 호출: [[Construct]]가 호출된다.
+new foo();
+```
+
+- 내부 메서드 [[Call]]을 갖는 함수 객체를 callable 이라 하며, 내부 메서드 [[Construct]]를 갖는 함수 객체를 constructor, [[Construct]]를 갖지 않는 함수 객체를 non-constuctor라고 부름
+- 호출할 수 없는 객체는 함수 객체가 아니므로 함수 객체는 반드시 callable이어야 함
+- 모든 함수 객체는 내부 메서드 [[Call]]을 갖고 있으므로 호출 가능
+- 하지만 모든 함수 객체가 [[Construct]]를 갖는 것은 아님
+
+<img width="541" alt="Screenshot 2023-05-15 at 9 44 03 PM" src="https://github.com/codesquad-members-2023-team6/issue-tracker/assets/96381221/fcf8371e-2d07-4db9-bc74-0fe2bd117709">
 
 ## constructor와 non-constructor의 구분
 
+- 함수 정의를 평가하여 함수 정의 방식에 따라 함수를 constructor와 non-constructor로 구분
+- constructor: 함수 선언문, 함수 표현식, 클래스(클래스도 함수)
+- non-constructor: 메서드(ES6 축약 표현), 화살표 함수
+
+```js
+// 일반 함수 정의: 함수 선언문, 함수 표현식
+function foo() {}
+const bar = function () {};
+// 프로퍼티 x의 값으로 할당된 것은 일반 함수로 정의된 함수다. 이는 메서드로 인정하지 않는다.
+const baz = {
+  x: function () {},
+};
+// 일반 함수로 정의된 함수만이 constructor다.
+new foo(); // -> foo {}
+new bar(); // -> bar {}
+new baz.x(); // -> x {}
+// 화살표 함수 정의
+const arrow = () => {};
+new arrow(); // TypeError: arrow is not a constructor
+// 메서드 정의: ES6의 메서드 축약 표현만 메서드로 인정한다.
+const obj = {
+  x() {},
+};
+new obj.x(); // TypeError: obj.x is not a constructor
+```
+
+??? 이 부분 잘 모르겠음... 메서드 축약 표현???
+
+- 함수를 프로퍼티 값으로 사용하면 일반적으로 메서드로 통칭
+- 하지만 ECMAScript 사양에서 메서드란 ES6의 메서드 축약 표현만을 의미
+- 즉, 함수가 어디에 할당되어 있는지에 따라 판단하는 것이 아닌 함수 정의 방식에 따라 constructor와 non-constructor를 구분
+- 함수 선언문, 함수 표현식으로 정의된 함수만이 constructor
+- ES6 화살표 함수와 메서드 축약 표현으로 정의된 함수는 non-constructor
+
+```js
+function foo() {}
+// 일반 함수로서 호출
+// [[Call]]이 호출된다. 모든 함수 객체는 [[Call]]이 구현되어 있다.
+foo();
+// 생성자 함수로서 호출
+// [[Construct]]가 호출된다. 이때 [[Construct]]를 갖지 않는다면 에러가 발생한다.
+new foo();
+```
+
+- 생성자 함수로서 호출될 것을 기대하고 정의하지 않은 일반 함수에 new 연산자를 붙여 호출하면 생성자 함수처럼 동작할 수 있음
+
 ## new 연산자
 
+- new 연산자와 함께 함수를 호출하면 생성자 함수로 동작함
+- 단, new 연산자와 함께 호출하는 함수는 constructor여야 함
+
+```js
+function foo() {}
+// 일반 함수로서 호출
+// [[Call]]이 호출된다. 모든 함수 객체는 [[Call]]이 구현되어 있다.
+foo();
+// 생성자 함수로서 호출
+// [[Construct]]가 호출된다. 이때 [[Construct]]를 갖지 않는다면 에러가 발생한다.
+new foo();
+```
+
+- 반대로 new 연산자 없이 생성자 함수를 호출하면 일반 함수로 호출됨
+- [[Call]]이 호출됨
+
+```js
+// 생성자 함수
+function Circle(radius) {
+  this.radius = radius;
+  this.getDiameter = function () {
+    return 2 * this.radius;
+  };
+}
+// new 연산자 없이 생성자 함수 호출하면 일반 함수로서 호출된다.
+const circle = Circle(5);
+console.log(circle); // undefined
+// 일반 함수 내부의 this는 전역 객체 window를 가리킨다.
+console.log(radius); // 5
+console.log(getDiameter()); // 10
+circle.getDiameter();
+// TypeError: Cannot read property 'getDiameter' of undefined
+```
+
 ## new.target
+
+- ES6에서는 생성자 함수가 new 없이 호출되는 것을 방지하기 위해 new.target 을 지원
+- new.target은 this 와 유사하게 constructor인 모든 함수에서 암묵적인 지역 변수와 같이 사용, 메타 프로퍼티라고 부른다
+- 함수 내부에서 new.target 을 사용하면 new 연산자와 함께 생성자 함수로서 호출되었는지 확인 가능
+- new 연산자와 함께 생성자 함수로서 호출되면 함수 내부의 new.target은 자기 자신을 가리킴
+- new 연산자 없이 일반 함수로서 호출된 함수 내부의 new.target은 undefined
+
+```js
+// 생성자 함수
+function Circle(radius) {
+  // 이 함수가 new 연산자와 함께 호출되지 않았다면 new.target은 undefined다.
+  if (!new.target) {
+    // new 연산자와 함께 생성자 함수를 재귀 호출하여 생성된 인스턴스를 반환한다.
+    return new Circle(radius);
+  }
+  this.radius = radius;
+  this.getDiameter = function () {
+    return 2 * this.radius;
+  };
+}
+// new 연산자 없이 생성자 함수를 호출하여도 new.target을 통해 생성자 함수로서 호출된다.
+const circle = Circle(5);
+console.log(circle.getDiameter());
+```
